[gd_scene load_steps=20 format=3 uid="uid://csh12euvfrdw"]

[ext_resource type="Texture2D" uid="uid://cy0iyw0wf0vek" path="res://addons/Tiny Swords/Factions/Knights/Troops/Warrior/Purple/Warrior_Purple.png" id="1_48yyx"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_j4d40"]
[ext_resource type="PackedScene" uid="uid://ctvnvmow284fe" path="res://scenes/ritual.tscn" id="2_77vdi"]
[ext_resource type="PackedScene" uid="uid://bqromhmtue06p" path="res://scenes/skull.tscn" id="3_j1av6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_h28wh"]
radius = 16.0
height = 58.0

[sub_resource type="Animation" id="Animation_npn2u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a8mlf"]
resource_name = "knight_attack_down_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_w1isx"]
resource_name = "knight_attack_down_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_sje1u"]
resource_name = "knight_attack_side_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15, 16, 17]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_3fm2p"]
resource_name = "knight_attack_side_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_mth8m"]
resource_name = "knight_attack_up_1"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [36, 37, 38, 39, 40, 41]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_rq1h0"]
resource_name = "knight_attack_up_2"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_deal_damage_to_enemies"
}]
}

[sub_resource type="Animation" id="Animation_0gxps"]
resource_name = "knight_idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_rivb6"]
resource_name = "knight_run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6yctd"]
_data = {
"RESET": SubResource("Animation_npn2u"),
"knight_attack_down_1": SubResource("Animation_a8mlf"),
"knight_attack_down_2": SubResource("Animation_w1isx"),
"knight_attack_side_1": SubResource("Animation_sje1u"),
"knight_attack_side_2": SubResource("Animation_3fm2p"),
"knight_attack_up_1": SubResource("Animation_mth8m"),
"knight_attack_up_2": SubResource("Animation_rq1h0"),
"knight_idle": SubResource("Animation_0gxps"),
"knight_run": SubResource("Animation_rivb6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_14rl7"]
radius = 109.005

[sub_resource type="CircleShape2D" id="CircleShape2D_grlie"]
radius = 46.0435

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_386r2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7ykp"]
bg_color = Color(0.870387, 1.44392e-06, 1.2514e-06, 1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_j4d40")
lerpFactor = 0.1
ritualScene = ExtResource("2_77vdi")
deathPrefab = ExtResource("3_j1av6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("1_48yyx")
hframes = 6
vframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -30)
shape = SubResource("CapsuleShape2D_h28wh")
debug_color = Color(0, 0.6, 0.701961, 0.145098)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6yctd")
}
autoplay = "knight_idle"

[node name="attackCD" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SwordArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwordArea"]
position = Vector2(0, -34)
shape = SubResource("CircleShape2D_14rl7")
debug_color = Color(0.995339, 0, 0.206971, 0.42)

[node name="HitboxArea" type="Area2D" parent="."]
position = Vector2(-1, -29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
shape = SubResource("CircleShape2D_grlie")
debug_color = Color(0.096142, 0.648469, 1.92523e-07, 0.42)

[node name="HitboxCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="HealthProgressBar" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = 4.0
offset_right = 71.0
offset_bottom = 23.0
scale = Vector2(0.810723, 0.519761)
theme_override_styles/background = SubResource("StyleBoxFlat_386r2")
theme_override_styles/fill = SubResource("StyleBoxFlat_h7ykp")
rounded = true
show_percentage = false

[connection signal="timeout" from="attackCD" to="." method="_on_attack_cd_timeout"]
[connection signal="timeout" from="HitboxCooldown" to="." method="_on_hitbox_cooldown_timeout"]
